WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
87458
[Forms][TextArea] Too long validation message doesn't count LF as CRLF
https://bugs.webkit.org/show_bug.cgi?id=87458
Summary
[Forms][TextArea] Too long validation message doesn't count LF as CRLF
yosin
Reported
2012-05-24 21:22:28 PDT
Imported from
http://crbug.com/129542
Number of characters in "Too long" validation message of textarea should count LF as CR+LF.
Attachments
Patch 1
(1.70 KB, patch)
2012-05-24 22:01 PDT
,
yosin
no flags
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
yosin
Comment 1
2012-05-24 22:01:15 PDT
Created
attachment 143972
[details]
Patch 1
yosin
Comment 2
2012-05-24 22:01:57 PDT
Comment on
attachment 143972
[details]
Patch 1 Could you review this patch? Thanks in advance.
WebKit Review Bot
Comment 3
2012-05-24 22:47:16 PDT
Comment on
attachment 143972
[details]
Patch 1 Clearing flags on attachment: 143972 Committed
r118477
: <
http://trac.webkit.org/changeset/118477
>
WebKit Review Bot
Comment 4
2012-05-24 22:47:26 PDT
All reviewed patches have been landed. Closing bug.
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug