[Forms][TextArea] Too long validation message doesn't count LF as CRLF https://bugs.webkit.org/show_bug.cgi?id=87458

Reviewed by Kent Tamura.

This patch changes current number of characters in "too long" validation message
parameter to counting newline as 2 characters (CR and LF) as submission data.

No new tests. To have test for this change, we need to change localization
text handling during DRT. We'll try.

* html/HTMLTextAreaElement.cpp:
(WebCore::HTMLTextAreaElement::validationMessage): Use computeLengthForSubmission instead of numGraphmeClusters.


Canonical link: https://commits.webkit.org/105230@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@118477 268f45cc-cd09-0410-ab3c-d52691b4dbfc